# playground

./: README.md  prices.json  pyproject.toml
note/app/: build.gradle.kts
note/app/src/androidTest/java/com/xz/noteapp/: ExampleInstrumentedTest.kt
note/app/src/main/java/com/xz/noteapp/: MainActivity.kt  NoteApplication.kt
note/app/src/main/java/com/xz/noteapp/data/: NoteDao.kt  NoteDatabase.kt  NoteRepository.kt
note/app/src/main/java/com/xz/noteapp/data/entities/: Note.kt
note/app/src/main/java/com/xz/noteapp/ui/screens/: NoteListingPage.kt
note/app/src/main/java/com/xz/noteapp/ui/theme/: Color.kt  Theme.kt  Type.kt
note/app/src/main/java/com/xz/noteapp/ui/viewmodels/: NoteViewModel.kt
note/app/src/test/java/com/xz/noteapp/: ExampleUnitTest.kt
note/gradle/: libs.versions.toml
note/gradle/wrapper/: gradle-wrapper.properties
week1/: README.md  server.py  test_client.py  test_plan_weekly_meals.py
week2/: codebase-research.md  plan-weekly-meals-design.md  proposals.md
